--- a/config/database.yml
+++ b/config/database.yml
@@ -8,6 +8,15 @@ default: &default
   adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
+development:
+  adapter: mysql2
+  encoding : utf8
+  database : ralis_tutorial
+  pool : 5
+  username : root
+  password:
+  host : localhost
+
 
 development:
   <<: *default
