--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -5,6 +5,9 @@
 # one by one as the offenses are removed from the code base.
 # Note that changes in the inspected code, or installation of new
 # versions of RuboCop, may require this file to be generated again.
+AllCops:
+    Exclude:
+    - 'db/schema.rb'
 
 # Offense count: 1
 # Cop supports --auto-correct.
